--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-APP_HOST=example.com
+APP_URL=http://example.com
+SATISFACTORY_SAVEGAME_DIR=/home/steam/.config/Epic/FactoryGame/Saved/SaveGames/server/
