--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,5 +38,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           file: docker/Dockerfile
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
