--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,9 +1,13 @@
+name: "Docker Build"
+
 on:
   push:
-    branches: ["main"]
-    tags: ["v*"]
+    tags: [ "v*" ]
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
+  workflow_run:
+    workflows: [ "Pint" ]
+    types: [ completed ]
 
 jobs:
   build:
