--- a/.github/workflows/pint.yml
+++ b/.github/workflows/pint.yml
@@ -9,6 +9,9 @@ jobs:
     name: Format Code
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
