--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,7 @@
 name: "Docker"
 
 on:
+  workflow_dispatch:
   push:
     tags: [ "v*" ]
   pull_request:
@@ -13,9 +14,6 @@ jobs:
   build:
     name: "Build"
     runs-on: ubuntu-latest
-
-    env:
-      DOCKER_IMAGE: tiifuchs/satisfactory-savegame-provider
 
     steps:
       - name: Checkout
@@ -44,5 +42,6 @@ jobs:
         with:
           file: docker/Dockerfile
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
