--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,6 +10,9 @@ on:
     workflows: [ "Pint" ]
     types: [ completed ]
 
+env:
+  DOCKER_IMAGE: tiifuchs/satisfactory-savegame-provider
+
 jobs:
   build:
     name: "Build"
@@ -21,7 +24,7 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
